--- a/playPadel/templates/playPadel/404.html
+++ b/playPadel/templates/playPadel/404.html
@@ -13,7 +13,7 @@
             <h1 class="display-1 logo">PlayPadel</h1>
             <h2 class="display-4">404</h2>
             <h4 class="display-4 mb-4">Pagina non trovata...</h4>
-            <p class="lead"><a href="{% url 'website:homepage' %}" class="btn btn-primary btn-lg">Go to the home page →</a></p>
+            <p class="lead"><a href="{% url 'website:homepage' %}" class="btn btn-primary btn-lg">Vai alla Homepage →</a></p>
           </div>
         </div>
       </div>
