--- a/playPadel/website/templates/website/cerca_impianto.html
+++ b/playPadel/website/templates/website/cerca_impianto.html
@@ -39,7 +39,7 @@
                 {% empty %}
                     <div class="row d-flex flex-column align-items-center text-center mt-5">
                         <h5 class="text-danger">Nessun impianto trovato...</h5>
-                        <a href="{% url 'website:website:impianti' %}" class="btn btn-outline-dark mt-2 w-25" role="button">Torna alla lista impianti</a>
+                        <a href="{% url 'website:website:impianti' %}" class="btn btn-outline-dark mt-2" role="button">Torna alla lista impianti</a>
                     </div>
                 {% endfor %}
             </div>
