--- a/playPadel/website/templates/website/search_template.html
+++ b/playPadel/website/templates/website/search_template.html
@@ -2,11 +2,11 @@
     <div class="row mt-4">
         <div class="col-md-6 form-inline">
             <label for="cercaNomeImpianto" class="ml-4"><strong>Cerca impianto per nome</strong></label>
-            <input class='form-control ml-2 w-50' id="cercaNomeImpianto" name="q" type="search" aria-label="Cerca" placeholder="Nome impianto" required>
+            <input class='form-control ml-2 w-50' id="cercaNomeImpianto" name="name" type="search" aria-label="Cerca" placeholder="Nome impianto" value="{{ request.GET.name }}">
         </div>
         <div class="col-md-4 form-inline">
             <label for="cercaPosizioneImpianto"><strong>Oppure per luogo</strong></label>
-            <input class='form-control ml-2 w-50' id="cercaPosizioneImpianto" name="q2" type="search" aria-label="Cerca" placeholder="Via/Città" required>
+            <input class='form-control ml-2 w-50' id="cercaPosizioneImpianto" name="pos" type="search" aria-label="Cerca" placeholder="Via/Città" value="{{ request.GET.pos }}">
         </div>
         <div class="col-md-2 text-right">
             <button class="btn btn-outline-primary mr-4" type="button" data-toggle="collapse" data-target="#filterCollapse" aria-expanded="false" aria-controls="collapseExample">
@@ -18,10 +18,30 @@
         <div class="card card-body">
             <div class="row">
                 <div class="col-md-4 form-inline border-right border-dark mr-2 pb-3">
-                    <label for="rangeNumCampi"><strong>Numero campi</strong></label>
-                    <input type="range" class="form-control-range is-valid" id="rangeNumCampi">
-                    <label for="rangePrezzo" class="mt-3"><strong>Prezzo</strong></label>
-                    <input type="range" class="form-control-range is-valid" id="rangePrezzo">
+                    <label for="minNumCampi"><strong>Numero minimo campi: </strong><span id="minNumCampiValue" class="ml-2">1</span></label>
+                    <input type="range" class="form-control-range is-valid" id="minNumCampi" name="mnc" value="{{ request.GET.mnc|default:1 }}" min="1" max="10">
+                    <script>
+                        // Script per aggiornare il valore del minimo numero di campi
+                        const inputMinNumCampi = document.getElementById('minNumCampi');
+                        const inputMinNumCampiValue = document.getElementById('minNumCampiValue');
+                        function updateMinNumCampiValue() {
+                            inputMinNumCampiValue.innerText = inputMinNumCampi.value;
+                        }
+                        inputMinNumCampi.addEventListener('input', updateMinNumCampiValue);
+                        window.addEventListener("load", updateMinNumCampiValue);
+                    </script>
+                    <label for="prezzoMax"><strong>Prezzo orario massimo: </strong><span id="prezzoMaxValue" class="ml-2">10</span>€</label>
+                    <input type="range" class="form-control-range is-valid" id="prezzoMax" name="pm" value="{{ request.GET.pm|default:50 }}" min="10" max="50">
+                    <script>
+                        // Script per aggiornare il valore del prezzo massimo
+                        const inputPrezzoMax = document.getElementById('prezzoMax');
+                        const inputPrezzoMaxValue = document.getElementById('prezzoMaxValue');
+                        function updatePrezzoMaxValue() {
+                            inputPrezzoMaxValue.innerText = inputPrezzoMax.value;
+                        }
+                        inputPrezzoMax.addEventListener('input', updatePrezzoMaxValue);
+                        window.addEventListener("load", updatePrezzoMaxValue);
+                    </script>
                 </div>
                 <div class="col-md-7 form-group ml-2 mb-0">
                     <strong class="float-left">Filtra caratteristiche</strong>
@@ -29,11 +49,11 @@
                         <div class="row form-check-inline mt-2 w-100">
                             <label for="tipoCampi" class="mr-4 mb-0">Tipologia campi:</label>
                             <div class="custom-control custom-checkbox mr-2">
-                                <input class="custom-control-input" type="checkbox" id="outdoor" checked>
+                                <input class="custom-control-input" type="checkbox" name="out" id="outdoor" {% if request.GET.out == 'on' %}checked{% endif %}>
                                 <label class="custom-control-label" for="outdoor">Outdoor</label>
                             </div>
                             <div class="custom-control custom-checkbox ml-2">
-                                <input class="custom-control-input" type="checkbox" id="indoor">
+                                <input class="custom-control-input" type="checkbox" name="ind" id="indoor" {% if request.GET.ind == 'on' %}checked{% endif %}>
                                 <label class="custom-control-label" for="indoor">Indoor</label>
                             </div>
                         </div>
@@ -41,28 +61,28 @@
                             <label for="serviziImpianto" class="text-left mb-0">Servizi impianto:</label>
                         </div>
                         <div class="row form-check-inline mt-1">
-                            <div class="custom-control custom-checkbox mr-2">
-                                <input class="custom-control-input" type="checkbox" id="serviziNoleggio">
+                            <div class="custom-control custom-checkbox">
+                                <input class="custom-control-input" type="checkbox" name="ccNoleggio" id="serviziNoleggio">
                                 <label class="custom-control-label" for="serviziNoleggio">Noleggio</label>
                             </div>
                             <div class="custom-control custom-checkbox ml-2">
-                                <input class="custom-control-input" type="checkbox" id="serviziSpogliatoi">
+                                <input class="custom-control-input" type="checkbox" name="ccSpogliatoi" id="serviziSpogliatoi">
                                 <label class="custom-control-label" for="serviziSpogliatoi">Spogliatoi</label>
                             </div>
                             <div class="custom-control custom-checkbox ml-2">
-                                <input class="custom-control-input" type="checkbox" id="serviziDocce">
+                                <input class="custom-control-input" type="checkbox" name="ccDocce" id="serviziDocce">
                                 <label class="custom-control-label" for="serviziDocce">Docce</label>
                             </div>
                             <div class="custom-control custom-checkbox ml-2">
-                                <input class="custom-control-input" type="checkbox" id="serviziBar">
+                                <input class="custom-control-input" type="checkbox" name="ccBar" id="serviziBar">
                                 <label class="custom-control-label" for="serviziBar">Bar</label>
                             </div>
                             <div class="custom-control custom-checkbox ml-2">
-                                <input class="custom-control-input" type="checkbox" id="serviziParcheggio">
+                                <input class="custom-control-input" type="checkbox" name="ccParcheggio" id="serviziParcheggio">
                                 <label class="custom-control-label" for="serviziParcheggio">Parcheggio</label>
                             </div>
                             <div class="custom-control custom-checkbox ml-2">
-                                <input class="custom-control-input" type="checkbox" id="serviziAltro">
+                                <input class="custom-control-input" type="checkbox" name="ccAltro" id="serviziAltro">
                                 <label class="custom-control-label" for="serviziAltro">Altro</label>
                             </div>
                         </div>
@@ -72,11 +92,15 @@
             <div class="row mt-4">
                 <div class="col-md-6 text-left">
                     <input type="reset" class="btn btn-outline-danger" value="Cancella filtri">
-                </div>
-                <div class="col-md-6 text-right">
-                    <button class="btn btn-primary">
-                        <i class="bi bi-magic"></i> Imposta Filtri
-                    </button>
+                    <script>
+                        const resetButton = document.querySelector('input[type=reset]');
+                        resetButton.addEventListener('click', function() {
+                            setTimeout(() => {
+                                inputMinNumCampiValue.innerText = inputMinNumCampi.value;
+                                inputPrezzoMaxValue.innerText = inputPrezzoMax.value;
+                            }, 100); // Aspetta 0.1 secondi prima di aggiornare il testo degli input range
+                        });
+                    </script>
                 </div>
             </div>
         </div>
@@ -86,22 +110,3 @@
     </div>
 </form>
 <hr class="hr" />
-
-<script>
-    // Script per impostare su 'required' solo uno dei due textfield
-    document.addEventListener('DOMContentLoaded', function() {
-        const inputs = Array.from(
-            document.querySelectorAll('input[name=q], input[name=q2], input[id=rangeNumCampi], input[id=rangePrezzo], input[id=indoor], ' +
-                'input[id=serviziNoleggio], input[id=serviziSpogliatoi], input[id=serviziDocce], input[id=serviziBar], input[id=serviziParcheggio], input[id=serviziAltro]')
-      );
-
-      const inputListener = e => {
-          inputs
-              .filter(i => i !== e.target)
-              .forEach(i => (i.required = !e.target.value.length));
-      };
-
-      inputs.forEach(i => i.addEventListener('input', inputListener));
-    });
-
-</script>
